<resources>
    <string name="app_name">Movies</string>
    <string name="popular_title">Popular</string>
    <string name="movieicon_content_desc" translatable="false">MovieIcon</string>
    <string name="movie_title_stub" translatable="false">Movie Title</string>
    <string name="movie_subtitle_stub" translatable="false">Movie Subtitle</string>
    <string name="movie_item_subtitle_format" translatable="false">%1$s (%2$s)</string>
    <string name="movie_poster_content_desc" translatable="false">movie_poster</string>
    <string name="movie_description_stub" translatable="false">Movie description</string>
    <string name="genre">"Genres: "</string>
    <string name="movie_genre_stub" translatable="false">Some Genre</string>
    <string name="country">"Countries: "</string>
    <string name="movie_country_stub" translatable="false">Country</string>
    <string name="retry">Retry</string>
    <string name="internet_error">There was an error loading data, please check your network connection</string>
    <string name="no_internet_icon_desc" translatable="false">no_internet_icon</string>
</resources>