<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?android:colorBackground">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="32dp">

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/movie_poster_placeholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:duration="800">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="600dp"
                android:backgroundTint="@android:color/darker_gray" />

        </com.facebook.shimmer.ShimmerFrameLayout>
        
        <ImageView
            android:id="@+id/movie_poster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/movie_poster_content_desc"/>

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/movie_details_placeholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:duration="800">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="300dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    app:cardCornerRadius="8dp"
                    android:backgroundTint="@android:color/darker_gray" />

                <androidx.cardview.widget.CardView
                    android:layout_width="300dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    app:cardCornerRadius="8dp"
                    android:backgroundTint="@android:color/darker_gray"/>
                <androidx.cardview.widget.CardView
                    android:layout_width="300dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    app:cardCornerRadius="8dp"
                    android:backgroundTint="@android:color/darker_gray" />
                <androidx.cardview.widget.CardView
                    android:layout_width="300dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    app:cardCornerRadius="8dp"
                    android:backgroundTint="@android:color/darker_gray" />

            </LinearLayout>

        </com.facebook.shimmer.ShimmerFrameLayout>

        <LinearLayout
            android:id="@+id/movie_details_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/movie_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_title_stub"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

            <TextView
                android:id="@+id/movie_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_description_stub"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genre"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/movie_genre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_genre_stub"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/country"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/movie_country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_country_stub"/>
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</ScrollView>